tests/syntax_errors/test80_2.tl
require "ifj21"
2xa253
